feat: Add Groq provider and Flow optimizations - Add Groq support (FREE alternative to Gemini) - Enhance prompts with Flow-specific structure - Add 5 style presets and multi-format exports - Add scene metadata and character consistency - Update docs with provider comparison

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
-# Your Gemini API Key
-# Get it from: https://aistudio.google.com/app/apikey
-GOOGLE_API_KEY=AIzaSyBUh0M8ksNSTOB3aUa3p09_eUVDkwrFMiA
+# Google Gemini API Key
+# Get your key from: https://aistudio.google.com/app/apikey
+GOOGLE_API_KEY=your_gemini_api_key_here
+
+# Groq API Key (FREE - no billing required!)
+# Get your key from: https://console.groq.com/keys
+GROQ_API_KEY=your_groq_api_key_here
+
+# Choose which provider to use by default
+# Options: gemini, groq
+DEFAULT_PROVIDER=groq
