feat: Add Google Veo 2 API integration for video generation and enable loading existing production sheets.

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,12 @@ GROQ_API_KEY=your_groq_api_key_here
 # Choose which provider to use by default
 # Options: gemini, groq
 DEFAULT_PROVIDER=groq
+
+# Google Cloud Platform (Optional - for advanced Vertex AI usage)
+# You can use GOOGLE_API_KEY for video generation (easiest)
+# OR set these for Vertex AI enterprise features:
+# GCP_PROJECT_ID=your-gcp-project-id
+# GCP_LOCATION=us-central1
+
+# Optional: Path to service account JSON key file
+# GOOGLE_APPLICATION_CREDENTIALS=path/to/service-account-key.json
